<resources>
    <string name="app_name">农产品App</string>
    <string name="open">hahah</string>
    <string name="close">nono</string>
    <string name="work_name">工作</string>
    <string name="data_name">数据</string>
    <string name="mine_name">我的</string>
    <string name="task_title">最新任务</string>
    <string name="place">种植地块</string>
    <string name="persticides_name">农药名称</string>
    <string name="fertilizer_name">化肥名称</string>
    <string name="location">位置:</string>
    <string name="usage">用量情况</string>
    <string name="remarks">使用备注</string>
    <string name="latitude">纬度:</string>
    <string name="longtitude">经度:</string>
    <string name="plot">种植地块</string>
    <string name="plant">种植名称</string>
    <string name="seed">种子名称</string>
    <string name="producer">生产厂商</string>
    <string name="picking">采摘情况</string>
    <string name="situation">发生情况</string>
    <string name="handle">处理办法</string>
    <string name="recorder">记录人员</string>
    <string name="title_activity_login">Sign in</string>
    <string name="loginname_hint">用户名</string>
    <string name="loginpassword_hint">密码</string>
    <string name="login_button">登陆</string>
    <string name="sign_button">注册</string>
    <string name="sign_name">用户名</string>
    <string name="sign_phone">手机号</string>
    <string name="sign_ID">身份证号</string>
    <string name="sign_pwd">密码</string>
    <string name="sign_pwd_ag">确认密码</string>
    <string name="sign_coop">合作社</string>
    <string name="img_path">MyappCache</string>
    <string name="quit">退出登录</string>
    <string name="set">设置</string>
    <string name="mainPage">首页</string>
    <string name="map">地图</string>
    <string name="about">关于</string>
    <string name="person_info">个人信息</string>

</resources>
