<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/item_one"
                        android:icon="@drawable/ic_settings_white_24dp"
                        android:title="@string/mainPage"
                        android:checked="true"></item>
                    <item
                        android:id="@+id/item_two"
                        android:icon="@drawable/ic_settings_white_24dp"
                        android:title="@string/map"></item>
                    <item
                        android:id="@+id/item_three"

                        android:icon="@drawable/ic_settings_white_24dp"
                        android:title="@string/set">

                    </item>
    </group>
</menu>