<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#343434"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:paddingBottom="50dp">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:id="@+id/signImgView"
            android:src="@drawable/ic_add_white_24dp"
            app:civ_border_width="2dp"
            app:civ_border_color="#FFFFFF"/>

        <LinearLayout
            android:focusable="true" android:focusableInTouchMode="true"
            android:layout_width="0px" android:layout_height="0px">
            <requestFocus />
        </LinearLayout>
        <EditText
            android:id="@+id/signNameText"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:singleLine="true"
            android:hint="@string/sign_name"
            android:textColorHint="#d1c8ba"
            android:textColor="#ffffff"
            android:textSize="13sp" />
        <EditText
            android:id="@+id/signPhoneText"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:hint="@string/sign_phone"
            android:textColorHint="#d1c8ba"
            android:textColor="#ffffff"
            android:textSize="13sp" />
        <EditText
            android:id="@+id/signIDText"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:hint="@string/sign_ID"
            android:textColorHint="#d1c8ba"
            android:textColor="#ffffff"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/signCOOPText"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:hint="@string/sign_coop"
            android:textColorHint="#d1c8ba"
            android:textColor="#ffffff"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/signPWDText"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:hint="@string/sign_pwd"
            android:inputType="textPassword"
            android:textColorHint="#d1c8ba"
            android:textColor="#ffffff"
            android:textSize="13sp" />
        <EditText
            android:id="@+id/signPWDAGText"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:hint="@string/sign_pwd_ag"
            android:inputType="textPassword"
            android:textColorHint="#d1c8ba"
            android:textColor="#ffffff"
            android:textSize="13sp" />

        <Button
            android:id="@+id/sign_enter_button"
            android:layout_width="280dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_button_seletor"
            android:text="@string/sign_button"
            android:textColor="#ffffff"
            android:textSize="15sp">
        </Button>

    </LinearLayout>

</ScrollView>