<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray">

    <include layout="@layout/include_mapview"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp">

            <LinearLayout
                android:focusable="true" android:focusableInTouchMode="true"
                android:layout_width="0px" android:layout_height="0px">
                <requestFocus />
            </LinearLayout>

            <include layout="@layout/include_location_text"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fertilizer_name"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp"
                    android:textSize="15sp"
                    android:id="@+id/fertilizer_name_text"
                    android:background="@drawable/editext_backgroud"
                    android:singleLine="true"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usage"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp"
                    android:textSize="15sp"
                    android:gravity="left|top"
                    android:id="@+id/usage_text"
                    android:background="@drawable/editext_backgroud"
                    android:lines="5"
                    android:maxLines="5"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remarks"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:gravity="left|top"
                    android:padding="5dp"
                    android:textSize="15sp"
                    android:id="@+id/remarks_text"
                    android:background="@drawable/editext_backgroud"
                    android:lines="5"
                    android:maxLines="5"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>