<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/layout_selector"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_marginLeft="16dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:id="@+id/personImgView"
            app:civ_border_width="1dp"
            app:civ_border_color="#343434"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:id="@+id/person_name"
            android:layout_toRightOf="@+id/personImgView"
            android:layout_alignParentTop="true"
            android:textSize="18sp"
            android:textColor="#000000"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/coop_name"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/personImgView"
            android:layout_below="@+id/person_name"
            android:textSize="15sp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/layout_selector"
        >
        <ImageView
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/set_img_view"
            android:src="@drawable/icon_a"/>
        <TextView
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/set_img_view"
            android:id="@+id/set_text"
            android:layout_marginLeft="16dp"
            android:textSize="15sp"
            android:text="@string/set"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/layout_selector"
        >
        <ImageView
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/adout_img_view"
            android:src="@drawable/icon_a"/>
        <TextView
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/adout_img_view"
            android:id="@+id/about_text"
            android:layout_marginLeft="16dp"
            android:textSize="15sp"
            android:text="@string/about"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/quit_layout"
        android:background="@drawable/layout_selector"
        >
        <TextView
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/quit_text"
            android:layout_marginLeft="16dp"
            android:textSize="15sp"
            android:text="@string/quit"
            />
    </RelativeLayout>
</LinearLayout>